books/kubernetes-up-and-running/ingress/alpaca-service.yml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-prod
spec:
  type: NodePort
  selector:
    app: alpaca
  ports:
  - port: 8080
    targetPort: 8080
