books/kubernetes-up-and-running/ingress/bandicoot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bandicoot-prod
spec:
  type: NodePort
  selector:
    app: bandicoot
  ports:
  - port: 8080
    targetPort: 8080
