books/kubernetes-up-and-running/ingress/simple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  labels:
    name: simple-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/teste"
        backend:
          service:
            name: alpaca
            port: 
              number: 8080
